@@ -1,11 +1,11 @@
 
 # Auxiliary R scripts of the IntaRNA package
 
-- [addPvalue2csv.R](#addpvalue2csvr)
-- [plotRegions.R](#plotregionsr)
+- [IntaRNA_CSV_p-value.R](#intarnacsvpvaluer)
+- [IntaRNA_plotRegions.R](#intrarnaplotregionsr)
 
 
-# `addPvalue2csv.R`
+# `IntaRNA_CSV_p-value.R`
 ### p-value estimates of IntaRNA energies from present energy distribution
 
 For genome-wide target sRNA predictions, we assume the set of energy values 
@@ -14,7 +14,7 @@ model for minimum energies of putative target sequences. Thus, we can fit a
 generalized extreme value (GEV) distribution to the data that is subsequently
 used to estimate p-values for each energy.
 
-The `addPvalue2csv.R` script takes an IntaRNA CSV output file (assumed to be
+The `IntaRNA_CSV_p-value.R` script takes an IntaRNA CSV output file (assumed to be
 sufficiently large and sane enough for GEV fitting) to compute respective
 p-value estimates. The output consists of the input table extended with a
 `p-value` column. If no output file is given or in- and output file names are 
@@ -24,19 +24,19 @@ estimated. Example calls are given below.
 
 ```bash
 # overwriting the input file with p-value-extended table
-Rscript --vanilla addPvalues2csv.R IntaRNA-output.csv
+Rscript --vanilla IntaRNA_CSV_p-value.R IntaRNA-output.csv
 # creating a new output file for p-value extension
-Rscript --vanilla addPvalues2csv.R IntaRNA-output.csv IntaRNA-output-with-pValue.csv
+Rscript --vanilla IntaRNA_CSV_p-value.R IntaRNA-output.csv IntaRNA-output-with-pValue.csv
 # computing p-values for normalized energies (has to be present in file IN.csv)
-Rscript --vanilla addPvalues2csv.R IN.csv IN-pValue.csv E_norm
+Rscript --vanilla IntaRNA_CSV_p-value.R IN.csv IN-pValue.csv E_norm
 ```
 
 
-# `plotRegions.R`
+# `IntaRNA_plotRegions.R`
 ### Visualization of RRI-covered regions
 
 To visualize sequences' regions covered by RNA-RNA interactions predicted by
-IntaRNA, you can use `plotRegions.R` by providing the following arguments (in 
+IntaRNA, you can use `IntaRNA_plotRegions.R` by providing the following arguments (in 
 the given order)
 
 1. CSV-IntaRNA output file (semicolon separated) covering the columns `start,end,id`
@@ -47,7 +47,7 @@ the given order)
 
 An example is given below, when calling
 ```bash
-Rscript --vanilla plotRegions.R pred.csv 1 regions.png
+Rscript --vanilla IntaRNA_plotRegions.R pred.csv 1 plotRegions.example.png
 ```
 
 with `pred.csv` containing
@@ -61,5 +61,5 @@ b0005;281;295;query;5;22
 ```
 
 will produce the output
-![plotRegions.R example](plotRegions.example.png)
+![IntaRNA_plotRegions.R example](plotRegions.example.png)
 
